--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.1",
     "jwt-decode": "^4.0.0",
@@ -19,7 +20,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.4.0"
+    "sonner": "^1.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
